--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -28,5 +28,18 @@
 			</div>
 
 		</div>
+		<a title="Web Analytics" href="http://getclicky.com/100552509"><img alt="Web Analytics" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+		<script type="text/javascript">
+		var clicky_site_ids = clicky_site_ids || [];
+		clicky_site_ids.push(100552509);
+		(function() {
+		  var s = document.createElement('script');
+		  s.type = 'text/javascript';
+		  s.async = true;
+		  s.src = '//static.getclicky.com/js';
+		  ( document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0] ).appendChild( s );
+		})();
+		</script>
+		<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100552509ns.gif" /></p></noscript>		
 	</body>
 </html>
