tags now included in meta

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@
   <ol id="posts">
     <li class="post">
       <h3><a href="#">{{page.title}}</a>
-      <span>{% if page.date %}{{ page.date | date_to_string }}{% endif %}</span></h3>
+      <span>{% if page.date %}{% include meta.md %}{% endif %}</span></h3>
       {{ content }}
     </li>
   </ol>
